@@ -1,3 +1,11 @@
+2017-06-05  Natalia Portillo  <claunia@claunia.com>
+
+	* Default.aspx.cs:
+	* UploadStatsController.cs: 
+
+	* ViewReport.aspx.cs: Show requested information before
+	adapted for filesystem.
+
 2017-06-04  Natalia Portillo  <claunia@claunia.com>
 
 	* AssemblyInfo.cs:
